fixed options button clipping icon

--- a/style.css
+++ b/style.css
@@ -308,7 +308,7 @@ a:visited {
     border-style: solid;
     word-break: keep-all;
     white-space: nowrap;
-    max-width: 100px;
+    max-width: 150px;
     overflow: hidden;
 }
 
